# fade_gen

./: Cargo.toml  README.md
src/: main.rs
